--- a/assignment7/fit-app/index.html
+++ b/assignment7/fit-app/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#" onclick="navigate('home'); return false;">FitApp</a>
+        <a class="navbar-brand" href="/home" onclick="navigate('home'); return false;">FitApp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
